--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,15 @@
+body > * {
+    box-sizing: border-box;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 @media(max-width: 700px) {
