--- a/css/styles.css
+++ b/css/styles.css
@@ -758,7 +758,7 @@ li {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     #contact .investors {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -771,6 +771,7 @@ li {
         width: 80px;
     }
     #contact {
+        box-sizing: border-box;
         padding: 30px 0 60px 0;
     }
 }
