--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ li {
     font-weight: 100;
     height: 60px;
     margin: 0 auto;
-    padding-top: 50px;
+    padding-top: 60px;
     text-align: center;
 }
 
@@ -307,7 +307,7 @@ li {
 #what-we-offer-title {
     text-align: center;
     padding-bottom: 40px;
-    padding-top: 20px;
+    padding-top: 60px;
     height: 50px;
     font-weight: 100;
     font-size: 2em;
@@ -423,7 +423,7 @@ li {
 #features-blurb {
     width: 50%;
     margin: 0 auto;
-    padding-top: 50px;
+    padding-top: 60px;
     text-align: center;
     margin-bottom: 30px;
     font-weight: 100;
@@ -583,7 +583,7 @@ li {
     margin-bottom: 10px;
     text-align: center;
     padding-bottom: 40px;
-    padding-top: 20px;
+    padding-top: 60px;
     height: 50px;
     font-weight: 100;
     font-size: 2em;
@@ -604,7 +604,7 @@ li {
     margin: 15px auto;
     text-align: center;
     padding-bottom: 40px;
-    padding-top: 20px;
+    padding-top: 60px;
     height: 50px;
     font-size: 2em;
 }
@@ -668,7 +668,8 @@ li {
     margin: 0 auto;
     text-align: left;
     padding-bottom: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    margin-left: 0px;
     padding-top: 20px;
     height: 50px;
     font-size: 2em;
