--- a/css/styles.css
+++ b/css/styles.css
@@ -605,6 +605,7 @@ li {
     text-align: center;
     padding-bottom: 40px;
     padding-top: 60px;
+    padding-left: 0px;
     height: 50px;
     font-size: 2em;
 }
