--- a/css/styles.css
+++ b/css/styles.css
@@ -659,7 +659,9 @@ li {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    padding: 0 10% 60px 10%;
+    padding-top: 30px;
+    padding-bottom: 100px;
+    padding-left: 200px;
 }
 
 #contact .feature-big-title {
