--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body > * {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto-Regular', sans-serif;
     font-size: 16px;
     margin: 0;
     overflow: hidden;
@@ -38,6 +38,24 @@ li {
     white-space: nowrap;
 }
 
+/*placeholder*/
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    grey;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    grey;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    grey;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    grey;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    grey;
+}
 
 /*header and nav bar*/
 
@@ -52,12 +70,22 @@ li {
     height: 20px;
 }
 
+.hero-nav-bar,
 #hero-nav-bar {
     height: 40px;
     margin-bottom: 50px;
 }
 
-#link-nav-list,
+.link-nav-list,
+#link-nav-list {    
+    display: inline-block;
+    list-style-type: none;
+    font-size: 1.5em;
+    float: left;
+    padding-left: 22px;
+    margin: 0;
+}
+.social-media-nav-list,
 #social-media-nav-list {
     display: inline-block;
     list-style-type: none;
@@ -79,7 +107,7 @@ li {
     background: url('../assets/img/hero-image-sea.jpg');
     background-size: cover;
     background-position: center;
-    height: 800px;
+    /*height: 800px;*/
     z-index: 0;
 }
 
@@ -107,8 +135,7 @@ li {
 }
 
 #hero-logo-image {
-    width: 106px;
-    height: 106px;
+    width: 150px;
     margin-top: 20px;
     margin-bottom: 50px;
 }
@@ -175,7 +202,7 @@ li {
         font-size: 1.2em;
     }
     #hero-image-header {
-        height: 667px;
+        /*height: 667px;*/
     }
     #top-left-logo {
         width: 129px;
@@ -195,33 +222,37 @@ li {
 
 /*explore deepsee section*/
 
-#explore-deepsee {
-    height: auto;
-    padding-bottom: 60px;
+#about {
+    height: auto;    
+    padding: 30px 0;
     width: 100%;
-    color: #297FCA;
+    color: #1E5E96;
     font-weight: 100;
     text-align: center;
 }
 
-#explore-deepsee-title {
+#about-title {
     font-size: 3em;
     font-weight: 100;
-    height: 60px;
     margin: 0 auto;
-    padding-top: 60px;
+    /*padding-top: 50px;*/
     padding-bottom: 20px;
     text-align: center;
 }
 
-#explore-deepsee-blurb {
+#about-blurb {
     font-size: .9em;
     font-weight: 500;
     line-height: 20px;
     height: auto;
-    width: 40%;
+    /*width: 40%;*/
     margin: 0 auto;
     margin-bottom: 30px;
+}
+
+.about-text-panel {
+    display: flex;
+    flex-direction: column;
 }
 
 #small-bar {
@@ -251,11 +282,11 @@ li {
 }
 
 @media (max-width: 700px) {
-    #explore-deepsee-blurb {
+    #about-blurb {
         padding-bottom: 50px;
         width: 75%;
     }
-    #explore-deepsee-title {
+    #about-title {
         font-size: 2em;
     }
     #small-bar {
@@ -326,7 +357,7 @@ li {
     height: auto;
 }
 
-#info-box-container {
+.about-content {
     text-align: center;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -343,6 +374,29 @@ li {
     margin: auto;
 }
 
+.about-text-column {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.about-image-column {
+    
+}
+
+.about-image {
+    width: 400px;
+}
+
+.about-text-header {
+    font-size: 1.4em;
+}
+
+.about-text {
+    margin: 0 20px 15px 20px;
+}
+
+/*.item1,
 #item1 {
     -webkit-box-ordinal-group: 2;
     -ms-flex-order: 1;
@@ -350,6 +404,7 @@ li {
     padding: 20px;
 }
 
+.item2,
 #item2 {
     -webkit-box-ordinal-group: 3;
     -ms-flex-order: 2;
@@ -357,12 +412,13 @@ li {
     padding: 20px;
 }
 
+.item3,
 #item3 {
     -webkit-box-ordinal-group: 4;
     -ms-flex-order: 3;
     order: 3;
     padding: 20px;
-}
+}*/
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (width: 375px) and (height: 559px) and (orientation: portrait) and (color: 8) and (device-aspect-ratio: 375/667) and (aspect-ratio: 375/559) and (device-pixel-ratio: 2) and (-webkit-min-device-pixel-ratio: 2) {
     #blue-logo-height {
@@ -370,8 +426,8 @@ li {
     }
 }
 
-@media (max-width: 700px) {
-    #info-box-container {
+@media (max-width: 744px) {
+    .about-content {
         text-align: center;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -488,11 +544,37 @@ li {
     padding-left: 50px;
 }
 
-.feature-big-title {
+/*.feature-big-title {
     font-size: 3em;
     margin-bottom: 10px;
     font-weight: 100;
-    padding-left: 50px;
+}*/
+
+.feature-new {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.feature-new .default-text {
+    max-width: 774px;
+    text-align: center;
+}
+
+.feature-title {
+    font-family: Roboto-Light, sans-serif;
+    font-size: 3em;
+    font-weight: 100;
+    margin-bottom: 20px;
+    /*width: 100%;*/
+    /*margin: auto;*/
+    /*text-align: center;*/
+    /*justify-content: center;*/
+    letter-spacing: -1px;
 }
 
 #blue-logo-height {
@@ -563,54 +645,72 @@ li {
 }
 
 
-/*workflow*/
+/*currentsee*/
 
-#workflow {
+#currentsee {
     position: relative;
     background-color: #1E5E96;
     padding: 30px 0;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#workflow .full-width-image {
+.full-width-image {
     width: 100%;
     margin: 60px 0;
 }
 
-#workflow .feature-big-title {
+/*#timeline .feature-big-title,
+#currentsee .feature-big-title {
     position: relative;
-    width: 80%;
+    width: 100%;
     margin: auto;
-    color: white;
     margin-bottom: 10px;
     text-align: center;
-    padding-top: 60px;
-    height: 50px;
-    font-weight: 200;
+    /*padding-top: 60px;*/
+/*    font-weight: 200;
     font-size: 3em;
-}
+}*/
 
+/*.currentsee-content {
+    width: 50%;
+    text-align: center;
+}*/
+
+#timeline {
+    position: relative;
+    background-color: white;
+    padding: 30px 0;
+    color: #1E5E96;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 /*team*/
 
 #team {
-    background-color: white;
-    color: #1E5E96;
+    background-color: #F3F8FC;
+    color: #1C466F;
+    padding: 30px 0;
 }
 
-#team .feature-big-title {
+/*#team .feature-big-title {
     position: relative;
     font-weight: 100;
     width: auto;
-    margin: 15px auto;
-    text-align: center;
-    padding-bottom: 40px;
-    padding-top: 60px;
-    padding-left: 0px;
-    height: 50px;
-    font-size: 3em;
-}
+    /*margin: 15px auto;*/
+    /*text-align: center;*/
+    /*padding-bottom: 40px;*/
+    /*padding-top: 60px;*/
+    /*padding-left: 0px;*/
+    /*height: 50px;*/
+    /*font-size: 3em;*/
+/*}*/
 
-#team .container {
+/*#team .container {
     width: 80%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -646,25 +746,58 @@ li {
 
 #team .container .person img {
     width: 80%;
+}*/
+
+.persons {
+    display:flex; 
+    flex-wrap: wrap; 
+    justify-content: center;
+    max-width: 800px;
+    margin: auto;
+}
+
+.person {
+    width: 200px;
+    margin: 0 30px;
+    text-align: center;
+}
+
+.person img {
+    width: 80%;
+}
+
+.person h3 {
+    font-family: Roboto-Medium, sans-serif;
+    font-size: 1.5em;
+    line-height:1.8em;
+}
+
+.person h5 {
+    font-size: .8em;
+    margin-top: -1em;
+}
+
+.person p {
+    font-size: .8em;
 }
 
 
 /*contact*/
 
 #contact {
-    background-color: #F4F9FD;
-    color: #1E5E96;
-    display: -webkit-box;
+    background-color: #1E5E96;
+    color: white;
+    /*display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     padding-top: 30px;
     padding-bottom: 100px;
-    padding-left: 200px;
+    text-align: center;*/
 }
 
-#contact .feature-big-title {
+/*#contact .feature-big-title {
     position: relative;
     font-weight: 100;
     width: 100%;
@@ -674,18 +807,29 @@ li {
     margin-bottom: 20px;
     padding-top: 40px;
     padding-left: 0px;
-    height: 50px;
     font-size: 3em;
-}
+}*/
 
-#contact > div {
+/*#contact > div {
     width: 50%;
     min-width: 300px;
     -ms-flex-negative: 0;
     flex-shrink: 0;
+}*/
+
+#contact form {
+    width:300px;
 }
 
-#contact .social {
+#contact .content {
+    justify-content: center;
+}
+
+#contact input, textarea, button {
+    width: 100%;
+}
+
+/*#contact .social {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -737,9 +881,9 @@ li {
     margin-right: 15px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-}
+}*/
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
     #contact .feature-big-title {
         text-align: center;
     }
@@ -765,8 +909,8 @@ li {
         width: 100%;
         margin-bottom: 60px !important;
     }
-}
-
+}*/
+/*
 @media (max-width: 450px) {
     #contact .investors {
         -webkit-box-orient: vertical;
@@ -813,13 +957,30 @@ li {
     background-image: -webkit-gradient(linear, left top, left bottom, from(#3cb0fd), to(#3498db));
     background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
+}*/
+
+#signup, #signup2 {
+    background-color: #1C466F;
+    color: #ffffff;
 }
 
+#signup .feature-title, #signup2 .feature-title {
+    font-size: 1.5em;
+}
+
+#signup .content, #signup2 .content {
+    justify-content: center;
+}
 
 /*footer*/
 
+footer {
+    background-color: #1C466F;
+    color: #ffffff;
+}
+
 #footer {
-    background-color: #1E5E96;
+    background-color: #1C466F;
     height: 100px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -832,7 +993,23 @@ li {
     justify-content: space-between;
     padding: 0 10%;
 }
-
+/*
 #footer img {
     height: 30px;
+}*/
+
+#footer .hero-nav-bar {
+    width:100%;
+}
+
+.copyright {
+    color: #cccccc;
+    padding-bottom:10px;
+}
+
+.copyright-hr {
+    color: #cccccc;
+    background-color: #cccccc;
+    border: none;
+    height: 1px;    
 }
