--- a/css/styles.css
+++ b/css/styles.css
@@ -386,7 +386,7 @@ li {
 }
 
 .about-image {
-    width: 400px;
+    max-width: 400px;
 }
 
 .about-text-header {
@@ -552,8 +552,7 @@ li {
 }*/
 
 .feature-new {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
