--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,12 @@ li {
     white-space: nowrap;
 }
 
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
 /*placeholder*/
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    grey;
@@ -372,7 +378,7 @@ li {
     height: auto;
     width: 80%;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .about-text-column {
@@ -381,12 +387,14 @@ li {
     text-align: left;
 }
 
-.about-image-column {
-    
-}
+/*.about-image-column {
+    display: flex;
+    flex-direction: column;  
+}*/
 
-.about-image {
-    max-width: 400px;
+.about-image-column img {
+    max-width: 100%;
+    margin: 20px auto 0;
 }
 
 .about-text-header {
@@ -551,7 +559,7 @@ li {
     font-weight: 100;
 }*/
 
-.feature-new {
+.feature {
     padding: 30px 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -560,7 +568,7 @@ li {
     flex-direction: column;
 }
 
-.feature-new .default-text {
+.feature .default-text {
     max-width: 774px;
     text-align: center;
 }
@@ -657,9 +665,8 @@ li {
     align-items: center;
 }
 
-.full-width-image {
-    width: 100%;
-    margin: 60px 0;
+.currentsee-img {
+    width: 95%;
 }
 
 /*#timeline .feature-big-title,
@@ -687,6 +694,10 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.timeline-img {
+    max-width: 80%;
 }
 
 /*team*/
