--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ li {
     transition: 0.3s;
 }
 
+form {
+    color: black;
+}
+
 /*placeholder*/
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    grey;
