finished faq page draft; fixed some issues with footers

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,11 @@ form {
     color: white;
 }
 
+.subpage-splash {
+    background-color: #1E5E96;
+    color: white;
+}
+
 .navbar {
     text-decoration: none;
     color: white;
