--- a/css/styles.css
+++ b/css/styles.css
@@ -84,9 +84,29 @@ form {
 /*header and nav bar*/
 
 .frontpage-splash {
-    background: url('../assets/img/hero-image-sea.jpg');
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='./assets/videos/ao-video-home-5.jpg', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/assets/videos/ao-video-home-5.jpg', sizingMethod='scale')";
     background-size: cover;
+    height: 100%;
+    max-height: 1000px;
+    max-height: 100rem;
+    min-height: 500px;
+    min-height: 50rem;
+    width: 100%;
+    position: relative;
+    overflow-x: visible;
+    overflow-y: hidden;
+    /*z-index: 2000;*/
     color: white;
+}
+
+.frontpage-splash-video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+    z-index: -1;
 }
 
 .subpage-splash {
@@ -228,6 +248,7 @@ form {
     /*font-weight: 100;*/
     /*height: 40px;*/
     margin-bottom: 5px;
+    margin-top: 120px;
     font-size: 1.2em;
 }
 
