--- a/css/styles.css
+++ b/css/styles.css
@@ -84,14 +84,15 @@ form {
 /*header and nav bar*/
 
 .frontpage-splash {
+    /*background: url('../assets/video/background-snapshot.jpg');*/
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='./assets/videos/ao-video-home-5.jpg', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/assets/videos/ao-video-home-5.jpg', sizingMethod='scale')";
     background-size: cover;
     height: 100%;
     max-height: 1000px;
-    max-height: 100rem;
-    min-height: 500px;
-    min-height: 50rem;
+    /*max-height: 100rem;*/
+    /*min-height: 500px;*/
+    /*min-height: 50rem;*/
     width: 100%;
     position: relative;
     overflow-x: visible;
@@ -101,6 +102,15 @@ form {
 }
 
 .frontpage-splash-video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+    z-index: -1;
+}
+
+.frontpage-splash-img {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -120,6 +130,7 @@ form {
     font-size: 1em;
     font-weight: bold;
     background-color: inherit;
+    margin-bottom:100px;
 }
 
 .navbar-brand {
@@ -242,13 +253,14 @@ form {
 #countdown {
     /*height: 100px;*/
     /*min-width: 800px*/
+    margin-top:20px;
 }
 
 #countdown-announcement {
     /*font-weight: 100;*/
     /*height: 40px;*/
     margin-bottom: 5px;
-    margin-top: 120px;
+    /*margin-top: 120px;*/
     font-size: 1.2em;
 }
 
@@ -277,7 +289,7 @@ form {
     height: 60px;
 }
 
-@media (max-width: 900px) {
+/*@media (max-width: 900px) {
     .timer {
         width: 70px;
     }
@@ -305,7 +317,7 @@ form {
         font-size: 1.2em;
     }
     #hero-image-header {
-        /*height: 667px;*/
+        height: 667px;
     }
     #top-left-logo {
         width: 129px;
@@ -320,7 +332,7 @@ form {
     #hero-text-thin {
         display: inherit;
     }
-}
+}*/
 
 
 /*explore deepsee section*/
