--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 
 h1 {
     font-size: 3em;
-    font-weight: 300;
+    /*font-weight: 300;*/
     margin: 30px;
     letter-spacing: -2px;
 }
