made top signup form transparent

--- a/css/styles.css
+++ b/css/styles.css
@@ -815,6 +815,11 @@ form {
     width: 100%;
 }
 
+#signup input {
+    background: transparent;
+    color: white;
+}
+
 #signup2 {
     background-color: #1C466F;
 }
