--- a/css/styles.css
+++ b/css/styles.css
@@ -723,6 +723,10 @@ form {
     width: 100%;
 }
 
+#signup {
+    margin-bottom:40px;
+}
+
 #signup input {
     background: transparent;
     color: white;
@@ -754,6 +758,7 @@ form {
 
 .signup-form input {
     width: 100%;
+    height: 35px;
 }
 
 .signup-form button {
