added date to timer, changed timer to 11/14/2017 midnight UTC

--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,10 @@ form {
     font-weight: bold;
 }
 
+#datePrettyElement {
+    margin-top:10px;
+}
+
 #scroller-image {
     padding-top: 79px;
     height: 60px;
