--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,15 @@ form {
     color: black;
 }
 
+/*PHP message pop-up*/
+
+#message-popup {
+    position: fixed;
+    z-index: 1;
+    margin: 20px 20px;
+    padding: 20px;
+}
+
 /*placeholder*/
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    grey;
